--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <hr>
     <h3>Books And Teaching</h3>
     <ul>
-      <li>Complete Java Pythin C And C++ etc Languages</li>
+      <li>Complete Java Python C And C++ etc Languages</li>
       <li>Engineering Books</li>
       <li> <a href="https://en.wikipedia.org/wiki/Quran">Queraan</a> </li>
     </ul>
